2008-05-02  Torsten Rahn  <rahn@kde.org>

    - Getting toggling the border feature working again - this time via the
      DGML2 "framework". Fixing lots of bugs on the way there.
    - introducing lots of qDebug statements (sorry!) for now.

    * src/lib/MarbleLegendBrowser.{cpp,h}:
    * src/lib/MarbleMap.{cpp,h}:
    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/scene/GeoSceneGroup.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneSettings.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DgmlValueTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DgmlAvailableTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DgmlPropertyTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DgmlGroupTagHandler.cpp:
    * src/lib/MarbleWidget.cpp:
    * src/lib/MarbleControlBox.cpp:
    * src/lib/VectorComposer.cpp:
    * src/lib/geodata/scene/GeoSceneProperty.cpp:

2008-05-02  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/scene/GeoSceneGroup.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneSettings.{cpp,h}:

    - Adding setters and getters to change the value of a  particular
      property throughout the hierarchy.

    * src/lib/ViewParams.{cpp,h}:
    * src/lib/MarbleModel.cpp:

    - Spring Cleanup: remove old members like m_oldProjection, added FIXMEs

    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/MarbleMap.cpp:
    * src/lib/MarbleLegendBrowser.{cpp,h}:
    * src/lib/MarbleControlBox.cpp:

    - Further connect the MarbleControlBox to the settings.

    * data/maps/earth/plain/plain.dgml:
    * data/maps/earth/srtm/srtm.dgml:

    - Changed boundaries -> borders for now.

2008-05-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MapThemeManager.cpp:
    * src/lib/MarbleMap.cpp:
    * src/lib/MarbleControlBox.cpp:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneHead.cpp:

    - Cleanup: remove redundant mini/maximumZoom from MarbleModel,
      remove qDebugs, fixing the mapThemeId, some minor regressions and 
      bugs.
